--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 /* @config '../../tailwind.config.ts'; */
 
@@ -8,7 +8,7 @@
 
 @layer utilities {
   :root {
-    --background: #ffffff;
+    --background: #fff;
     --foreground: #171717;
   }
 
